# GD-Expedite

./: CMakeLists.txt  LICENSE  README.md  cmakevs2017x64.bat
GDExp/: CMakeLists.txt  DetourMain.cpp  DetourMain.h  DetourUtil.cpp  DetourUtil.h  Logger.cpp  Logger.h
GDExpLoader/: CMakeLists.txt  GDExpLoader.cpp  options.cpp  options.h
common/: common.h  proc.h
item/: Item.cpp  Item.h  ItemAffix.h  ItemMethods.cpp  ItemMethods.h  ItemReplicaInfo.cpp  ItemReplicaInfo.h  prefixList.h  suffixList.h  swapList.h
